--- a/puhelinluettelo/src/index.css
+++ b/puhelinluettelo/src/index.css
@@ -66,3 +66,23 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.success {
+  color: green;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  background: lightgray;
+  border-style: solid;
+  border-radius: 5px;
+}
+
+.error {
+  color: red;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  background: lightgray;
+  border-style: solid;
+  border-radius: 5px;
+}
